Comp5370/Homework 2/problem-1-1.firewall.txt
# Generated by iptables-save v1.8.4 on Tue Sep 22 01:47:29 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 3389 -j DROP
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p tcp -m tcp --dport 21 -j DROP
-A OUTPUT -p tcp -m tcp --dport 3389 -j DROP
-A OUTPUT -p tcp -m tcp --dport 22 -j DROP
-A OUTPUT -p tcp -m multiport --sports 69,135,137,138,139,161,162,445,514 -j DROP
-A OUTPUT -p tcp -m multiport --sports 6660,6661,6662,6663,6664,6665,6666,6667,6668,6669 -j DROP
-A OUTPUT -p tcp -m tcp --dport 21 -j DROP
COMMIT
# Completed on Tue Sep 22 01:47:29 2020
